# Schlag

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Frontend Standards.md  LICENSE  PRODUCT.md  README.md  RELEASE.md  TODO.md  index.html  package-lock.json  package.json  plan.md  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: content_index.rs  database.rs  fs_ops.rs  indexer.rs  lib.rs  main.rs  preview.rs  search.rs  settings.rs  tags.rs  terminal.rs
src/features/file-explorer/: FileExplorerView.tsx  file-explorer.types.ts  index.ts  useFileExplorer.ts  useSearch.ts
src/features/file-explorer/components/: AddressBar.tsx  Combobox.tsx  ConfirmModal.tsx  ContextMenu.tsx  EditActionsBar.tsx  EntryGrid.tsx  EntryTable.tsx  FileTagChips.tsx  FilterBar.tsx  IndexStatusBadge.tsx  ListingActions.tsx  PreviewPane.tsx  PromptModal.tsx  RecentFiles.tsx  SearchFiltersFields.tsx  SearchModal.tsx  SearchResultRow.tsx  SettingsPage.tsx  Sidebar.tsx  SidebarContextMenu.tsx  StatusBar.tsx  TabBar.tsx  TabContextMenu.tsx  TerminalPanel.tsx  ThisPCView.tsx  Toolbar.tsx  UpdateBanner.tsx  ViewMenu.tsx  WindowControls.tsx  WindowResizeHandles.tsx
src/features/file-explorer/lib/: dnd.ts  entryType.ts  fileTypeIcon.test.ts  fileTypeIcon.tsx  filterContentResults.ts  filterEntries.test.ts  filterEntries.ts  folderIcon.tsx  folderSuggestions.ts  format.ts  groupEntries.test.ts  groupEntries.ts  highlightSnippet.test.ts  (+33 more)
(+5 files in other folders)
