[package]
name = "schlag"
version = "1.1.0"
description = "A modern, high-performance desktop file explorer"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "schlag_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
walkdir = "2"
notify = "6"
rayon = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tantivy = "0.26.1"
pdf-extract = "0.12.0"
calamine = "0.36.0"
zip = "8.6.0"
quick-xml = "0.41.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
portable-pty = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_System_Registry", "Win32_System_Com"] }

